--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <h1 th:text="'Index Page'">Index Page</h1>
+
+    <ul>
+        <li><a href="/vets">Vets List</a></li>
+    </ul>
 </body>
 </html>
