Create Owner Index Page and Controller. Closes #12.

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <h1 th:text="'Index Page'">Index Page</h1>
 
     <ul>
+        <li><a href="/owners">Owners List</a></li>
         <li><a href="/vets">Vets List</a></li>
     </ul>
 </body>
