Add ability to add or update an owner. Closes #54
	* Add Maven dependency for some basic MVC validation

		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

	* OwnerController: add request mappings for new Owner form, process new Owner, Owner update form, process Owner update

		@GetMapping("/new")
		public ModelAndView showAddOwnerForm() {
			ModelAndView mav = new ModelAndView(VIEWS_OWNER_OWNERS_FORM);
			mav.addObject("owner", new OwnerDTO());

			return mav;
		}

		@PostMapping("/new")
		public String createOwner(@Valid @ModelAttribute OwnerDTO owner, BindingResult result, Model model) {
			if (result.hasErrors()) {
				return VIEWS_OWNER_OWNERS_FORM;
			} else {
				OwnerDTO savedOwner = ownerService.save(owner);
				model.addAttribute("owner", savedOwner);
				return VIEWS_OWNER_OWNERS_REDIRECT + savedOwner.getId();
			}
		}

		@GetMapping("/{ownerId}/edit")
		public ModelAndView showUpdateOwnerForm(@PathVariable Long ownerId) {
			ModelAndView mav = new ModelAndView(VIEWS_OWNER_OWNERS_FORM);
			mav.addObject("owner", ownerService.findById(ownerId));

			return mav;
		}

		@PostMapping("/{ownerId}/edit")
		public String updateOwner(@ModelAttribute OwnerDTO owner, BindingResult result, Model model, @PathVariable Long ownerId) {
			if (result.hasErrors()) {
				return VIEWS_OWNER_OWNERS_FORM;
			} else {
				if (owner.getId() == null) { // For some reason 'id' is always null on the incoming model
					owner.setId(ownerId);
				}

				OwnerDTO savedOwner = ownerService.save(owner);
				model.addAttribute("owner", savedOwner);

				return VIEWS_OWNER_OWNERS_REDIRECT + savedOwner.getId();
			}
		}

	* Thymeleaf form reused for add and update flow

		- th:object => bind form to model attribute
		- th:action => as we are reusing the form for add and update => we need to determine if it is a new owner or an existing one.
				${owner['new']}
						<!--/*
						

--- a/pet-clinic-web/src/main/resources/templates/owners/form.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/form.html
@@ -4,8 +4,12 @@
 <body>
 
 <h2>Owner</h2>
-<form th:object="${owner}" class="form-horizontal" id="add-owner-form" method="post">
+<form th:object="${owner}" class="form-horizontal" id="add-owner-form" method="post"
+      th:action="${owner['new']} ? '/owners/new' : '/owners/' + ${owner.id} + '/edit'">
     <div class="form-group has-feedback">
+
+        <input th:if="!${owner['new']}"
+                th:replace="~{fragments/inputField :: input ('', 'id', 'hidden')}" />
         <input
                 th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}" />
         <input
@@ -19,10 +23,12 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button
-                    th:with="text=${owner['new']} ? 'Add Owner' : 'Update Owner'"
-                    class="btn btn-default" type="submit" th:text="${text}">Add
-                Owner</button>
+            <!--/*
+                test if owner.isNew() returns true, basically test if it is a new or existing owner by checking if id is null
+                this requires a method new(), getNew() or isNew() to be available in the OwnerDTO
+            */-->
+            <button th:with="text=${owner['new']} ? 'Add Owner' : 'Update Owner'"
+                    class="btn btn-default" type="submit" th:text="${text}">Add Owner</button>
         </div>
     </div>
 </form>
